fixed: z-index

--- a/css/main.css
+++ b/css/main.css
@@ -453,6 +453,7 @@ header nav .right .contact {
 
 #hero div.wrapper .image {
   position: relative;
+  z-index: -1;
 }
 
 #hero div.wrapper .image img {
@@ -462,7 +463,7 @@ header nav .right .contact {
 
 #hero div.wrapper .image .dotted, #hero div.wrapper .image .bottom-right {
   position: absolute;
-  z-index: -1;
+  z-index: -2;
 }
 
 #hero div.wrapper .image .dotted {
