--- a/sass/layout/_hero.sass
+++ b/sass/layout/_hero.sass
@@ -31,13 +31,15 @@
 
     .image
       position: relative
+      z-index: -1
       img
         display: inline-block
         border-radius: 0 32px 32px 32px
         
+        
       .dotted, .bottom-right
         position: absolute
-        z-index: -1
+        z-index: -2
 
       .dotted
         top: -65px
